correcting connection bugs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Spark JavaScript SDK Example</title>
+    <title>Pzartech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link rel="stylesheet" href="css/activity-spinner.css">
@@ -13,7 +13,6 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
-<div id="test-banana"></div>
 <div id="loader">
 <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
 </div>
