--- a/login.html
+++ b/login.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Spark JavaScript SDK Example</title>
+    <title>Connecting to Cisco Spark...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/activity-spinner.css">
+    <link rel="stylesheet" href="css/material.min.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
-    <main class="login-page">
-      <section>
-        <span class="branding large">Kitchen Sink</span>
-        <button class="primary-button large" id="login-button">Spark Log In</button>
-      </section>
-    </main>
+    <div id="loader">
+<div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
+</div>
 
     <script src="js/loginBundle.js"></script>
   </body>
